--- a/DeepReinforcementLearning/requirements.txt
+++ b/DeepReinforcementLearning/requirements.txt
@@ -32,15 +32,15 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.1
 pytz==2018.3
-PyYAML==3.12
+PyYAML==4.2b1
 pyzmq==17.0.0
 scipy==1.0.1
 simplegeneric==0.8.1
 six==1.11.0
 tensorboard==1.6.0
-tensorflow==1.6.0
+tensorflow==1.12.1
 termcolor==1.1.0
 tornado==5.0.1
 traitlets==4.3.2
 wcwidth==0.1.7
-Werkzeug==0.14.1
+Werkzeug==0.15.3
